# collab_filtering

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_backend.py
collab_filtering/: api.py  api_objects.py  backend.py
exports/: similarities.txt
tests/: app_test.py
