[tool.poetry]
name = "incremental_collaborating_filtering"
version = "0.1.0"
description = ""
authors = ["G.Kyzirids <giorgos.zapata@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
pytest = "^7.3.1"
requests = "^2.28.2"
uvicorn = "^0.21.1"
httpx = "^0.24.0"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
